added all the required apis

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <div class="crypto">
           <div class="crypto-top"></div>
         </div>
-        <div class="weather">Weather</div>
+        <div class="weather">
+          <p>Weather</p>
+        </div>
       </header>
       <main>
         <div class="time">12:00 AM</div>
